testsuite/poke.pkl/int-union-type-diag-2.pk
/* { dg-do compile } */

type Foo =
  union int<65> /* { dg-error "" } */
  {
  };
